--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CajaBusiness.cs" />
     <Compile Include="ClienteBusiness.cs" />
     <Compile Include="LoginBusiness.cs" />
     <Compile Include="ProductoBusiness.cs" />
