--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ECaja.cs" />
     <Compile Include="ECliente.cs" />
     <Compile Include="EProducto.cs" />
     <Compile Include="EProveedor.cs" />
