SE AGREGA LOGICA DE HISTORICOS, SE CAMBIAN LOGICA DE PRECIOS UNITARIOS, REVISAR BIEN LAS COMPRAS Y VENTAS

--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="ECaja.cs" />
     <Compile Include="ECliente.cs" />
+    <Compile Include="EHistorico.cs" />
     <Compile Include="EProducto.cs" />
     <Compile Include="EProveedor.cs" />
     <Compile Include="EUsuario.cs" />
