--- a/TPC1_BRITEZ/TPC1_BRITEZ.csproj
+++ b/TPC1_BRITEZ/TPC1_BRITEZ.csproj
@@ -74,6 +74,12 @@
     <Compile Include="Caja.Designer.cs">
       <DependentUpon>Caja.cs</DependentUpon>
     </Compile>
+    <Compile Include="CarroGrid.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CarroGrid.Designer.cs">
+      <DependentUpon>CarroGrid.cs</DependentUpon>
+    </Compile>
     <Compile Include="Clientes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,6 +129,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Caja.resx">
       <DependentUpon>Caja.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CarroGrid.resx">
+      <DependentUpon>CarroGrid.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Clientes.resx">
       <DependentUpon>Clientes.cs</DependentUpon>
